# estabelecer-chaves-pkg

./: .gitignore  Cenário1.py  Cenário2.py  Cenário3.py  Cenário4.py  Cenário5.py  CenárioBase.py  CodeGenerator.py  LICENSE  Main.py  NOTES.md  Plotagem.py  README.md  TODO.md  amplificacao_privacidade.py  bch.py  canal_rayleigh.py  gui.py  plotkar.py  plotkdr.py  pyproject.toml
canal/: canal.py
codigos_corretores/: bch.py
docs/: ANALISE_AMPLIFICACAO_PRIVACIDADE.md  ANALISE_EXP05_CORRECOES.md  ARCHITECTURE.md  ATUALIZACOES_FINAIS.md  AUDIT.md  BER_vs_KDR.md  COMPARACAO_ARTIGO_REFERENCIA.md  CORRECAO_MAIN_PY.md  CORRELACAO_RAYLEIGH.md  DISTANCIAS_IDEAIS.md  FIGURAS_PYTHON.md  FLUXO_COMPLETO.md  GITIGNORE_RESUMO.md  MELHORIAS_IMPLEMENTADAS.md  MELHORIAS_PROXIMATE.md  MELHORIAS_REALISTAS.md  MODULACAO_PORTADORA.md  NOTES.md  OTIMIZACAO_EXPERIMENTOS.md  PARAMETROS_FREQUENCIA.md  PLANEJAMENTO_EXPERIMENTOS.md  PROMPTS_FIGURAS.md  README.md  REFERENCIAS_BIBLIOGRAFICAS.md  RELATORIO_FINAL.md  RESULTADOS_EXPERIMENTAIS.md  RESULTADOS_EXPERIMENTOS.md  ROADMAP.md  SEGURANCA_EVE.md  TERMS.md  TODO.md  edital_texto.txt  proximate_texto.txt  referencia_base_texto.txt  relatorio_anterior_texto.txt
experimentos/: README.md  __init__.py  calcular_distancias_ideais.py  executar_todos.py  exp01_variacao_snr.py  exp02_comparacao_modulacao.py  exp02_variacao_sigma.py  exp03_comparacao_modulacao.py  exp03_variacao_bch.py  exp04_analise_complexidade.py  exp04_variacao_correlacao.py  exp05_perfis_dispositivos.py  exp05_variacao_bch.py  exp06_analise_complexidade.py  exp06_analise_eve.py  exp07_impacto_guard_band.py  exp07_perfis_dispositivos.py  exp08_variacao_distancia.py  exp09_analise_eve.py  exp10_multiplas_fontes.py  gerar_fig03_clarke.py  quickstart.sh  util_experimentos.py
experiments/: bch_comparison.py  csi_snr_sweep.py  eve_correlation_sweep.py  guard_band_sweep.py  rssi_noise_sweep.py  run_all.py  utils.py
pilares/: amplificacao_privacidade.py  reconciliacao.py
src/: __init__.py
testes/: README.md  __init__.py  executar_testes.py  teste_amplificacao.py  teste_melhorias.py  teste_pkg_completo.py
tests/: __init__.py  test_amplificacao_privacidade.py  test_amplificacao_seguranca.py  test_bch.py  test_binario_util.py  test_canal.py  test_config_dispositivos.py  test_reconciliacao.py  test_sistema_completo.py
(+210 files in other folders)
