[build-system]
requires = ["poetry-core>=2.0,<3.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "plkg-simulator"
version = "0.2.0"
description = "Reproducible physical-layer key generation simulations for CSI and RSSI"
authors = [
    { name = "Pedro Henrique Duarte Frugoli", email = "pedro.frugoli@ges.inatel.br" },
    { name = "Henrique Rodrigues Mendonca", email = "henrique.mendonca@ges.inatel.br" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<3.14"
dependencies = [
    "numpy>=2.1,<3.0",
    "scipy>=1.14,<2.0",
    "galois>=0.4.7,<0.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<10",
    "pytest-cov>=6,<8",
    "ruff>=0.9,<1",
    "mypy>=1.14,<2",
]

[tool.poetry]
packages = [{ include = "plkg", from = "src" }]
include = [
    { path = "src/plkg/radio/profile_data/*.toml", format = ["sdist", "wheel"] },
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=plkg --cov-report=term-missing"
markers = [
    "statistical: slower tests that validate statistical properties",
]

[tool.coverage.run]
branch = true
source = ["plkg"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
packages = ["plkg"]
strict = true
warn_unreachable = true
ignore_missing_imports = true
